# INSY_674_Machine_Learning

./: EDA.ipynb  README.md
starbucks-sales-ml/: README.md  pyproject.toml
starbucks-sales-ml/data/: coffee_shop_sales_daily.csv  ~$Coffee Shop Sales.xlsx
starbucks-sales-ml/scripts/: run_pipeline.py
starbucks-sales-ml/src/starbucks_sales_ml/: __init__.py  config.py  data.py  modeling.py  train.py
