[project]
name = "starbucks-sales-ml"
version = "0.1.0"
description = "Sample Starbucks cafe sales prediction with LightGBM and baseline models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
  "joblib>=1.3",
]

[project.scripts]
starbucks-train = "starbucks_sales_ml.train:main"

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["starbucks_sales_ml"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["S101"]
